--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "at-ui-style",
-  "version": "1.5.1",
+  "name": "at-ui-style-ziuxlab",
+  "version": "1.5.2",
   "description": "The StyleSheet for AT-UI",
   "scss": "src/index.scss",
   "main": "css/at.css",
